IVYPORTAL-8577: Needed features for release 8.0 II - Fixed alignment
Former-commit-id: 57cfe4d4693d0c713eb4e7d580559a761c5c275d

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4410,10 +4410,6 @@ a.ui-widget:focus {
   padding-right: 20px;
 }
 
-.all-processes-container {
-  padding-top: 15px !important; 
-}
-
 /**************DATA TABLE START*******************/
 .column-header-top-alignment {
   vertical-align: baseline;
